; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_ident.c_ident_apply.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_ident.c_ident_apply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_PASSTHROUGH = common dso_local global i32 0, align 4
@GIT_FILTER_SMUDGE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i8**, i32*, i32*, i32*)* @ident_apply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ident_apply(i8** %0, i8** %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i8** %0, i8*** %7, align 8
  store i8** %1, i8*** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %12 = load i8**, i8*** %7, align 8
  %13 = call i32 @GIT_UNUSED(i8** %12)
  %14 = load i8**, i8*** %8, align 8
  %15 = call i32 @GIT_UNUSED(i8** %14)
  %16 = load i32*, i32** %10, align 8
  %17 = call i64 @git_buf_text_is_binary(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %5
  %20 = load i32, i32* @GIT_PASSTHROUGH, align 4
  store i32 %20, i32* %6, align 4
  br label %35

21:                                               ; preds = %5
  %22 = load i32*, i32** %11, align 8
  %23 = call i64 @git_filter_source_mode(i32* %22)
  %24 = load i64, i64* @GIT_FILTER_SMUDGE, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %31

26:                                               ; preds = %21
  %27 = load i32*, i32** %9, align 8
  %28 = load i32*, i32** %10, align 8
  %29 = load i32*, i32** %11, align 8
  %30 = call i32 @ident_insert_id(i32* %27, i32* %28, i32* %29)
  store i32 %30, i32* %6, align 4
  br label %35

31:                                               ; preds = %21
  %32 = load i32*, i32** %9, align 8
  %33 = load i32*, i32** %10, align 8
  %34 = call i32 @ident_remove_id(i32* %32, i32* %33)
  store i32 %34, i32* %6, align 4
  br label %35

35:                                               ; preds = %31, %26, %19
  %36 = load i32, i32* %6, align 4
  ret i32 %36
}

declare dso_local i32 @GIT_UNUSED(i8**) #1

declare dso_local i64 @git_buf_text_is_binary(i32*) #1

declare dso_local i64 @git_filter_source_mode(i32*) #1

declare dso_local i32 @ident_insert_id(i32*, i32*, i32*) #1

declare dso_local i32 @ident_remove_id(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
